--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
         <button (click)="copy()">Copy</button>
         <button (click)="delete()">Delete</button>
       </div>
-    </div><br>
+    </div>
     <div id="container"></div>
   </div>
 </body>
